<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="myName"
            type="com.example.personal.MyName" />
    </data>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        style="@style/NameStyle"/>

    <EditText
        android:id="@+id/nicknameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Wnickname"
        android:inputType="textPersonName"
        android:paddingTop="20dp"
        android:text=""
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/small_padding"
        android:fontFamily="@font/roboto"
        android:text="@string/button"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/nicknameText"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone"
        android:text=""
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/small_padding"/>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellow_star"
        android:paddingTop="@dimen/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bio_scrolling">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            app:srcCompat="@android:drawable/checkbox_on_background" />

        <TextView
            android:id="@+id/bio_text"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="@dimen/easy_to_read"
            android:text="@string/bio" />




        </LinearLayout>


    </ScrollView>

</LinearLayout>
</layout>